# cmdarg

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  cmake-builder.py
.devcontainer/: Dockerfile  devcontainer.json
include/public/: cmdarg.hpp
include/public/cmdarg/: actions.hpp  argument.hpp  help_formatter.hpp  parser.hpp
src/: actions.cc  help_formatter.cc  parser.cc
test/: CMakeLists.txt  test.cc
